k8s/examples/nginx-ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: nginx.slh
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
