k8s/examples/nginx-ingress/nginx-ingressroute-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: nginx-ingressroute
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`nginx.slh`) && PathPrefix(`/`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: nginx-service
      port: 80
